test/message/destructuring-array-non-iterable-object.out
*%(basename)s:6: TypeError: [Symbol.iterator] is not a function
var [a] = x;
          ^
TypeError: [Symbol.iterator] is not a function
    at *%(basename)s:6:11
